<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GiphySearch</string>
    <string name="search">Search</string>
    <string name="trending">Trending</string>
</resources>
